--- a/css/style.css
+++ b/css/style.css
@@ -637,6 +637,13 @@ html {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+.input-checkbox:checked + .checkbox-icon {
+  border-color: var(--accent-color);
+  background-color: var(--accent-color);
+  background-image: url("../img/icons/vector.svg");
+  background-size: contain;
+  background-origin: border-box;
+}
 .checkbox-icon {
   display: inline-block;
   margin-right: 8px;
@@ -657,10 +664,52 @@ html {
   padding-left: 56px;
   padding-right: 55px;
   border-radius: 4px;
-  transform: translateX(164px);
+  transform: translateX(134px);
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscription-form {
+  display: flex;
+}
+.footer-email {
+  margin-right: 12px;
+  padding: 15px 16px;
+  width: 358px;
+  color: var(--accent-text-color);
+  background-color: var(--background-color);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+}
+.email-btn {
+  display: flex;
+  align-items: center;
+  border-radius: 4px;
+  border: none;
+  min-width: 200px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 29px;
+  padding-right: 28px;
+  cursor: pointer;
+  color: var(--accent-text-color);
+  background-color: var(--accent-color);
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  text-decoration: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.email-btn .btn-text {
+  margin-right: 10px;
+}
+.icon-send {
+  fill: currentColor;
 }
