--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,9 @@ html {
 .footer > .container {
   display: flex;
   justify-content: space-between;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  align-items: baseline;
 }
 .footer-address > .logo {
   display: block;
@@ -679,7 +682,7 @@ html {
   margin-right: 12px;
   padding: 15px 16px;
   width: 358px;
-  color: var(--accent-text-color);
+  color: var(--primary-white-color);
   background-color: var(--background-color);
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -695,7 +698,7 @@ html {
   padding-left: 29px;
   padding-right: 28px;
   cursor: pointer;
-  color: var(--accent-text-color);
+  color: var(--primary-white-color);
   background-color: var(--accent-color);
   font-family: Roboto, sans-serif;
   font-style: normal;
